@@ -115,6 +115,7 @@ Version 2.3.0 - The river knows.
 		* btkaos for his important work finding the source of bugs.
 		* myth for seeing when everyone else was blind and uncovering
 		  the grandfather of all fuck-ups
+		* mirko.g for being so committed to compile aMule on Snow Leopard.
 
 --------------------------------------------------------------------------------
 
